syntax="proto3

package myraftpb;

option go_package = "./";

message RequestVoteArgs {
	int64 Term = 1;   
	int64 CandidateId  = 2;
	int64 LastLogIndex = 3;
	int64 LastLogTerm  = 4;
}

message RequestVoteReply{
	int64 term=1;
	bool vote_granted=2;
}

service RaftService{
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteResponse){}
}




